--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,6 +9,7 @@ html {
 body {
     font-size: 1.6rem;
     font-family: "Poppins", sans-serif;
+    background: #FFFAF5;
 }
 
 /* Common */
@@ -98,4 +99,65 @@ button {
     background: #000958;
     color: #fff;
     border: none;
+}
+
+/* Hero */
+
+.hero {
+    margin: 74px;
+}
+
+.hero__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between
+}
+
+.hero__media {
+    display: flex;
+}
+
+.hero__img-wrap {
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+    width: 388px;
+    height: 488px;
+    background: #FE997B;
+    border-radius: 16px;
+    border: 3px solid white;
+}
+
+.hero__img {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: inherit;
+}
+
+.hero__decor {
+    position: absolute;
+    z-index: -1;
+}
+
+.hero__decor-left {
+    left: -58px;
+    bottom: 10px;
+}
+
+.hero__decor-right {
+    top: 16px;
+    right: -43px;
+}
+
+.hero__img-wrap-small {
+    align-self: flex-end;
+    width: 184px;
+    height: 244px;
+    margin: 0 0 -58px -24px;
+    border: 2px solid #f7dddf;
+    background: #faa7ad;
+}
+
+.hero__img-small {
+
 }
