--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -114,7 +114,9 @@ button {
 }
 
 .hero__media {
+    position: relative;
     display: flex;
+    padding-bottom: 94px;
 }
 
 .hero__img-wrap {
@@ -158,6 +160,61 @@ button {
     background: #faa7ad;
 }
 
-.hero__img-small {
+.hero__list {
+    position: absolute;
+    left: 129px;
+    bottom: 0;
+    width: 250px;
+    height: 190px;
+    padding: 18px 14px;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: -17px 14px 68px -4px #CFAE8440;
+}
 
+.hero-list-item {
+    display: flex;
+}
+
+.hero-list-item__thumb {
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    object-fit: cover;
+    background: #F7A70C52;
+}
+
+.hero-list-item__info {
+    margin-left: 10px;
+}
+
+.hero-list-item__title {
+    font-family: Sora, sans-serif;
+    font-weight: 600;
+    font-size: 1.4rem;
+    line-height: 1;
+    color: #181E52;
+
+}
+
+.hero-list-item__skeletion {
+    margin-top: 6px;
+    width: var(--width, 118px);
+    height: 4px;
+    opacity: 0.08;
+    background: #000958;
+    border-radius: 10px;
+}
+
+.hero-list-item__separate {
+    display: block;
+    width: 100%;
+    height: 2px;
+    margin: 20px 0;
+    border: 2px solid #F2F2F2;
+    background: #F2F2F2;
+}
+
+.hero__list-item:nth-of-type(2) .hero-list-item__thumb{
+    background: #6597C2;
 }
