--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,6 +32,7 @@ h3,
 h4,
 h6 {
     font-family: "Sora", sans-serif;
+    margin: 0;
 }
 
 input,
@@ -74,6 +75,23 @@ button {
     height: 20px;
     border-radius: 50%;
     background: #fff;
+    box-shadow: 4px 3px 10px -1px rgba(191, 41, 0, 0.4);
+}
+
+.section-heading {
+    font-family: Sora, sans-serif;
+    font-weight: 700;
+    font-size: 5.2rem;
+    line-height: 1.19;
+    color: #000958;
+}
+
+.about__desc {
+    margin-top: 24px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.88;
+    color: #656689;
 }
 
 .btn:hover {
@@ -288,4 +306,67 @@ button {
     line-height: 1;
     text-decoration: underline;
     color: #000958;
+}
+
+/* About */
+
+.about {
+    margin-top: 207px;
+}
+
+.about__inner {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.about__label {
+    font-family: Sora, sans-serif;
+    font-weight: 600;
+    font-size: 1.6rem;
+    line-height: 1;
+    color: #5E6085;
+}
+
+.about__heading {
+    margin-top: 15px;
+}
+
+.about__heading,.about__desc {
+    width: 444px;
+}
+
+.about__checklist {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: flex-start;
+    gap: 36px;
+    margin-top: 54px;
+}
+
+.about__check-item {
+    position: relative;
+    display: flex;
+    align-items: center;
+    column-gap: 10px;    
+    font-weight: 500;
+    font-size: 1.8rem;
+    line-height: 1;
+    color: #48496A;
+}
+
+.about__check-item::before {
+    content: '';
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background: #FF5D31;
+    box-shadow: 0px 4px 15px -3px rgba(255, 93, 49, 0.69);
+    border-radius: 4px;
+}
+
+.about__check-item::after {
+    position: absolute;
+    top: 4px;
+    left: 3px;
+    content: url(../icons/Check.svg)
 }
