--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -248,11 +248,11 @@ button {
 
 .hero-list-item__skeleton {
     margin-top: 6px;
-    width: var(--width,118px);
+    width: var(--width, 118px);
     height: 4px;
     border-radius: 10px;
     opacity: 0.08;
-    background:#000958;
+    background: #000958;
 }
 
 .hero-list-item__separete {
@@ -260,7 +260,7 @@ button {
     margin: 20px 0;
     width: 100%;
     height: 2px;
-    background:#F2F2F2;
+    background: #F2F2F2;
     border-radius: 99px;
 }
 
@@ -292,7 +292,7 @@ button {
 }
 
 .hero__cta-btn {
-    --height:60px;
+    --height: 60px;
     min-width: 190px;
     font-size: 1.6rem;
     box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
@@ -317,6 +317,7 @@ button {
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
+    row-gap: 146px;
 }
 
 .about__media {
@@ -335,7 +336,8 @@ button {
     margin-top: 15px;
 }
 
-.about__heading,.about__desc {
+.about__heading,
+.about__desc {
     width: 444px;
 }
 
@@ -351,7 +353,7 @@ button {
     position: relative;
     display: flex;
     align-items: center;
-    column-gap: 10px;    
+    column-gap: 10px;
     font-weight: 500;
     font-size: 1.8rem;
     line-height: 1;
@@ -379,7 +381,7 @@ button {
     position: absolute;
     top: 155px;
     left: 0;
-    padding: 30px 26px ;
+    padding: 30px 26px;
     width: 136px;
     opacity: 1;
     border-radius: 10px;
@@ -389,7 +391,7 @@ button {
 }
 
 .about__card-title {
-    font-family: Sora,sans-serif;
+    font-family: Sora, sans-serif;
     font-weight: 700;
     font-size: 4.2rem;
     line-height: 1;
@@ -415,7 +417,7 @@ button {
     margin-left: auto;
 }
 
-.about__img-warp::after{
+.about__img-warp::after {
     position: absolute;
     height: 336px;
     inset: auto 0 0 0;
@@ -436,4 +438,64 @@ button {
     top: 149px;
     right: -50px;
     z-index: -1;
+}
+
+.about__img-warp-bottom {
+    width: 458px;
+    margin-left: 0;
+    border-radius: 18px;
+    background: linear-gradient(180deg, #C6E2FA 0%, #94C2EA 100%);
+    border: 2px solid rgba(255, 255, 255, 1)
+}
+
+.about__img-warp-bottom::after {
+    content: none;
+}
+
+.about__img-bottom {
+    width: 100%;
+}
+
+.about__decor-img {
+    position: absolute;
+}
+
+.about__decor-img:nth-child(1) {
+    top: 13px;
+    right: 64px;
+}
+
+.about__decor-img:nth-child(2) {
+    top: -16px;
+    right: 13px;
+}
+
+.about__decor-img:nth-child(3) {
+    top: 33px;
+    right: -21px;
+}
+
+.about__decor-img:nth-child(4) {
+    top: 268px;
+    right: -33px;
+}
+
+.about__decor-img:nth-child(5) {
+    bottom: 150px;
+    right: 19px;
+}
+
+.about__decor-img:nth-child(6) {
+    right: -24px;
+    bottom: -40px;
+}
+
+.about__decor-img:nth-child(7) {
+    right: -33px;
+    bottom: -47px;
+}
+
+.about__decor-img:nth-child(8) {
+    right: -42px;
+    bottom: -55px;
 }
