--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -85,7 +85,7 @@ button {
     color: #000958;
 }
 
-.about__desc {
+.section-desc{
     margin-top: 24px;
     font-weight: 400;
     font-size: 16px;
@@ -498,4 +498,86 @@ button {
 .about__decor-img:nth-child(8) {
     right: -42px;
     bottom: -55px;
+}
+
+.about__desc-bottom {
+    width: 511px;
+}
+
+.tab__list {
+    position: relative;
+    display: flex;
+    column-gap: 56px;
+}
+
+.tab__list::after,
+.tab__item--active::after,
+.tab__content-more::after {
+    position: absolute;
+    content: '';
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 2px;
+    border-radius: 1px;
+    background: #FF5B2E;
+    opacity: 0.07;
+}
+
+.tab__item--active::after {
+    width: 95px;
+    opacity: 1;
+}
+
+.tab__item {
+    position: relative;
+    padding-bottom: 10px;
+    display: flex;
+    align-items: center;
+    column-gap: 12px;
+}
+
+.tab__icon {
+    width: 20px;
+}
+
+.tab__title {
+    font-family: Sora,sans-serif;
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 1;
+    color: #48496A;
+}
+
+.tab__content-item {
+    display: none;
+}
+
+.tab__content-item--active {
+    display: block;
+}
+
+.tab__content-desc {
+    width: 391px;
+    margin-top: 36px;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1.71;
+    color: #656689;
+}
+
+.tab__content-more {
+    position: relative;
+    display: inline-block;
+    margin-top: 32px;
+    padding-bottom: 5px;
+    font-weight: 500;
+    font-size: 1.6rem;
+    line-height: 1;
+    color: #FF5D31;
+}
+
+.tab__content-more::after {
+    opacity: 1;
+    height: 1.5px;
 }
