--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -607,6 +607,7 @@ button {
 .service__body {
     display: grid;
     grid-template-columns: auto 1fr auto;
+    column-gap: 65px;
     margin-top: 71px;
 }
 
@@ -618,7 +619,7 @@ button {
     border-radius: 10px;
 }
 
-.service-item + .service-item {
+.service-item+.service-item {
     margin-top: 24px;
 }
 
@@ -631,7 +632,7 @@ button {
     margin-bottom: 18px;
 }
 
-.service-item__heading::before{
+.service-item__heading::before {
     content: '';
     width: 22px;
     border: 2px solid;
@@ -659,6 +660,47 @@ button {
 }
 
 .service-item__more::after {
-    content:url(../icons/arrow-up-right.svg);
-    margin:1px 0 0 5px;
+    content: url(../icons/arrow-up-right.svg);
+    margin: 1px 0 0 5px;
+}
+
+.service__media {
+    position: relative;
+    margin-top: 18px;
+}
+
+.service__media::after {
+    content: '';
+    position: absolute;
+    height: 350px;
+    left: 16px;
+    right: 16px;
+    bottom: 0;
+    background: linear-gradient(180deg, #9DF1FB 0%, #73D0DB 108.14%);
+    border-radius: 10px;
+
+}
+
+.service__img {
+    position: relative;
+    display: block;
+    z-index: 1;
+    width: 100%;
+}
+
+.service__cta-wrap {
+    display: flex;
+    justify-content: center;
+    margin-top: 45px;
+}
+
+.service__cta {
+    min-width: 214px;
+    padding: 20px 40px;
+    font-weight: 500;
+    font-size: 1.6rem;
+    line-height: 1;
+    text-align: center;
+    color: #FF5B2E;
+    border: 1px solid #FF5B2E
 }
