--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -732,7 +732,7 @@ button {
     position: relative;
     margin: 0 16px;
     border-radius: 130px;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .staff-item__img-wrap::before {
@@ -746,11 +746,52 @@ button {
     background: linear-gradient(180deg, #90CCFF 0%, #59A8EB 95.96%);
 }
 
+.staff-item__img-wrap::after {
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+}
+
+.staff-item:nth-child(1) .staff-item__img-wrap::after {
+    content: url(../img/staff-decor-01.svg);
+}
+
+.staff-item:nth-child(2) .staff-item__img-wrap::before {
+    background: linear-gradient(180deg, #FF997E 0%, #F3752E 100%);
+}
+
+.staff-item:nth-child(2) .staff-item__img-wrap::after {
+    content: url(../img/staff-decor-02.svg);
+}
+
+.staff-item:nth-child(3) .staff-item__img-wrap::before {
+    background: linear-gradient(180deg, #FABF3E 0%, #FFA14A 100%);
+}
+
+.staff-item:nth-child(3) .staff-item__img-wrap::after {
+    content: url(../img/staff-decor-03.svg);
+}
+
+.staff-item:nth-child(4) .staff-item__img-wrap::before {
+    background: linear-gradient(180deg, #5BD6E2 0%, #00A7CC 100%);
+}
+
+.staff-item:nth-child(4) .staff-item__img-wrap::after {
+    content: url(../img/staff-decor-04.svg);
+}
+
+.staff-item:nth-child(even) .staff-item__img-wrap::after {
+    bottom: initial;
+    top: 16px;
+}
+
 .staff-item__img {
     position: relative;
     z-index: 1;
     width: 100%;
     display: block;
+    border-radius: inherit;
 }
 
 .staff-item__title {
