--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -741,20 +741,26 @@ button {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 266px;
+    height: 94%;
     border-radius: inherit;
     background: linear-gradient(180deg, #90CCFF 0%, #59A8EB 95.96%);
 }
 
 .staff-item__img-wrap::after {
+    content: "";
     position: absolute;
     left: 50%;
     bottom: 0;
     transform: translateX(-50%);
+    width: calc(100% + 36px);
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: 100%
 }
 
 .staff-item:nth-child(1) .staff-item__img-wrap::after {
-    content: url(../img/staff-decor-01.svg);
+    background-image: url(../img/staff-decor-01.svg);
 }
 
 .staff-item:nth-child(2) .staff-item__img-wrap::before {
@@ -762,7 +768,7 @@ button {
 }
 
 .staff-item:nth-child(2) .staff-item__img-wrap::after {
-    content: url(../img/staff-decor-02.svg);
+    background-image: url(../img/staff-decor-02.svg);
 }
 
 .staff-item:nth-child(3) .staff-item__img-wrap::before {
@@ -770,7 +776,7 @@ button {
 }
 
 .staff-item:nth-child(3) .staff-item__img-wrap::after {
-    content: url(../img/staff-decor-03.svg);
+    background-image: url(../img/staff-decor-03.svg);
 }
 
 .staff-item:nth-child(4) .staff-item__img-wrap::before {
@@ -778,12 +784,11 @@ button {
 }
 
 .staff-item:nth-child(4) .staff-item__img-wrap::after {
-    content: url(../img/staff-decor-04.svg);
+    background-image: url(../img/staff-decor-04.svg);
 }
 
 .staff-item:nth-child(even) .staff-item__img-wrap::after {
-    bottom: initial;
-    top: 16px;
+    background-position: 0 16px;
 }
 
 .staff-item__img {
