--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -919,6 +919,10 @@ button {
     padding: 30px 28px;
 }
 
+.pricing-item__active {
+    box-shadow: 0px 20px 44px 0px rgba(195, 108, 22, 0.06);
+}
+
 .pricing-item__type {
     font-weight: 400;
     font-size: 1.2rem;
@@ -969,4 +973,44 @@ button {
 .pricing-item__item::before {
     content: url(../icons/pricing-check.svg);
     margin-right: 14px  ;
+}
+
+/* Review */
+.reivew {
+    padding: 53px 0;
+}
+
+.review__inner {
+    display: flex;
+    align-items: center;
+    column-gap: 44px;
+}
+
+.review__control {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    width: 54px;
+    height: 54px;
+    border-radius: 50%;
+    border: 1.5px solid #FFD1C4;
+    background: transparent;
+    color: #FF5B2E;
+}
+
+.review__control:hover {
+    color: #fff;
+    background: #FF5B2E;
+    border-color:#FF5B2E;
+    cursor: pointer;
+}
+
+.review-item__media {
+    flex-shrink: 0;
+    width: 274px;
+}
+
+.review-item__img {
+    width: 100%;
 }
