--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -976,8 +976,8 @@ button {
 }
 
 /* Review */
-.reivew {
-    padding: 53px 0;
+.review {
+    padding: 104px 0 52px;
 }
 
 .review__inner {
@@ -1006,11 +1006,105 @@ button {
     cursor: pointer;
 }
 
+.review__control:nth-of-type(2) {
+    margin-left: auto
+}
+
+.reivew_list {
+    display: flex;
+}
+
+.review-item {
+    display: flex;
+    align-items: center;
+    column-gap: 115px;
+    flex-shrink: 0;
+    width: 100%;
+}
+
 .review-item__media {
+    position: relative;
     flex-shrink: 0;
     width: 274px;
+    margin-top: -52px;
+    border-radius: 137px;
+}
+
+.review-item__media::after {
+    content: '';
+    position: absolute;
+    inset: auto 0 0 0;
+    height: 82%;
+    background: #FFDA54;
+    border-radius: inherit;
+}
+
+.review__content {
+    overflow: hidden;
+}
+
+.review-item__content {
+    margin-top: 28px;
 }
 
 .review-item__img {
+    display: block;
+    position: relative;
+    z-index: 1;
     width: 100%;
+    border-radius: inherit;
+}
+
+.review-item__quote {
+    width: 553px;
+    margin-top: 24px;
+    font-weight: 400;
+    font-size: 1.8rem;
+    line-height: 1.6;
+    color: #000;
+}
+
+.review-item__author {
+    display: flex;
+    align-items: center;
+    margin-top: 34px;
+    font-family: Sora, sans-serif;
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 1;
+    color: #282828;
+}
+
+.review-item__author::before {
+    display: inline-block;
+    content: '';
+    width: 20px;
+    height: 2px;
+    margin-right: 8px;
+    border-radius: 1px;
+    background: #000;
+}
+
+.review__dots {
+    margin-top: 56px;
+    display: flex;
+    justify-content: center;
+    column-gap: 8px;
+}
+
+.review__dot {
+    width: 8px;
+    height: 8px;
+    border-radius: 4px;
+    border: 1px solid #FF5B2F;
+}
+
+.review__dot:hover {
+    background: #FF5B2F;
+    cursor: pointer;
+}
+
+.review__dot--active {
+    width: 24px;
+    background: #FF5B2F;
 }
