--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1108,3 +1108,30 @@ button {
     width: 24px;
     background: #FF5B2F;
 }
+
+.blog {
+    padding: 78px 0;
+}
+
+.blog__top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.blog__info {
+    width: 350px;
+    margin-right: 74px;
+}
+
+.blog__desc {
+    margin-top: 0;
+}
+
+.blog_cta {
+    width: 182px;
+    margin-top: 24px;
+    border: 1px solid rgb(255 91 96 / 60%);
+    color: #FF5B2E;
+
+}
