--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1197,8 +1197,7 @@ button {
 
 .footer {
     margin-top: 53px;
-    background: #FFF6ED;
-
+    background: linear-gradient(to right, #FFF6ED 43%, transparent 42%);
 }
 
 .footer__inner {
@@ -1206,10 +1205,11 @@ button {
 }
 
 .footer__left {
+    width: 42%;
     padding: 114px 0 148px;
 }
 
-.search-form {
+.subcribe-form {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -1221,16 +1221,24 @@ button {
     border: 1px solid rgba(255, 91, 46, 0.25);
 }
 
-.search-form__input {
+.subcribe-form__input {
     width: 100%;
     height: 100%;
     padding: 0 22px;
     border-radius: inherit;
     border: none;
     outline: none;
+    font-size: 1.4rem;
 }
 
-.search-form__submit {
+.subcribe-form__input::placeholder {
+    font-size: 1.2rem;
+    line-height: 1.67;
+    color: #656689;
+    opacity: 0.8;
+}
+
+.subcribe-form__submit {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1246,7 +1254,7 @@ button {
     outline: none;
 }
 
-.search-form__submit:hover {
+.subcribe-form__submit:hover {
     opacity: 0.9;
     cursor: pointer;
 }
@@ -1275,6 +1283,43 @@ button {
 
 }
 
+
 .social-item:hover {
     opacity: 0.9;
+}
+
+
+.footer__right {
+    flex: 1;
+    padding: 52px 0 48px 0;
+}
+
+.footer__row {
+    margin-left: 129px;
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 58px 137px;
+}
+
+.footer__list {
+    margin-top: 14px;
+}
+
+.footer_link {
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 2;
+    color: #656689;
+}
+
+.footer_link:hover {
+    text-decoration: underline;
+}
+
+.footer__copyright {
+    margin: 52px 0 0 22px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    color: #656689;
 }
