sửa màu viền nút đăng ký phần header

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -139,10 +139,13 @@ button {
     height: var(--height);
 }
 
+.header-action__link {
+    border-color: var(--primary-color);
+}
+
 .header-action__link:hover {
     background: var(--primary-color);
     color: #fff;
-    border: none;
 }
 
 /* Hero */
